Closed Bug 95480 Opened 25 years ago Closed 25 years ago

JS error messages are sometimes lost.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: jst, Assigned: jst)

Details

(Whiteboard: [HAVE FIX])

Attachments

(2 files)

In some cases the JS error reporter is called with a report that contains no error message, but the message argument that is passed to the error reporter does contain the message. In these cases we loose the error message, patch coming up.
Attached patch Proposed fixSplinter Review
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.9.4
sr=vidur
Fixed.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Johnny reported this one & he is the one who fixed too, so marking it verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: