Fixing bug 95480. JS error messages were sometimes lost, we printed the filename and linenumber to the console, but the actual message was lost... r=pollmann@netscape.com, sr=vidur@netscape.com